--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@ name: Deploy React App to elink.cat
 on:
   push:
     branches:
-      - main  # o la branca que vulguis
+      - main
 
 jobs:
   build-and-deploy:
@@ -27,12 +27,9 @@ jobs:
       - name: 🏗️ Compila el projecte
         run: npm run build
 
-      - name: 🚀 Desplega amb rsync via SSH
-        uses: burnett01/rsync-deployments@v1.0.1
-        with:
-          switches: -avzr --delete
-          path: build/  # o dist/
-          remote_path: /home/u123456789/domains/elink.cat/public_html/
-          remote_host: ${{ secrets.SSH_HOST }}
-          remote_user: ${{ secrets.SSH_USER }}
-          remote_key: ${{ secrets.SSH_PRIVATE_KEY }}
+      - name: 📂 Upload build al servidor via rsync
+        run: |
+          mkdir -p ~/.ssh
+          echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
+          chmod 600 ~/.ssh/id_rsa
+          rsync -avz --delete -e "ssh -o StrictHostKeyChecking=no -p 22" build/ ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:/home/u123456789/domains/elink.cat/public_html/
